optimizing invoice template

--- a/i18n/locales/en.json
+++ b/i18n/locales/en.json
@@ -42,7 +42,7 @@
                 "heading": "Items",
                 "item": "Item",
                 "name": "Name",
-                "quantity": "Quantity",
+                "quantity": "Hours",
                 "rate": "Rate",
                 "total": "Total",
                 "description": "Description",
